--- a/styles/common.less
+++ b/styles/common.less
@@ -20,11 +20,8 @@
 	canvas {
 		display: inline-block;
 		vertical-align: middle;
+		background: #fff;
 	}
-}
-
-.vega {
-	background: #fff;
 }
 
 .client-nojs {
